<resources>
	<string name="app_name">AstroWeather</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="enter_coords">Enter location:</string>
	<string name="sunrise_time">Sunrise</string>
	<string name="sunset_time">Sunset</string>
	<string name="dusk_time">Dusk</string>
	<string name="dawn_time">Dawn</string>
	<string name="azimuth">Azimuth</string>
	<string name="lunar_day">Lunar day</string>
	<string name="moon_phase">Moon phase</string>
	<string name="full_moon">Full moon</string>
	<string name="new_moon">New moon</string>
	<string name="moonset">Moonset</string>
	<string name="moonrise">Moonrise</string>
	<string name="preferences">Change main location</string>
	<string name="refresh_time">Refresh time</string>
	<string name="add_city">Add city</string>
	<string name="enter_location">Enter new location</string>
	<string name="remove_all_cities">Remove all cities</string>
</resources>
